# etl

./: .gitignore  README.md  binance.json  pools.json  setup.sh  uniswap.json
src/: etl.py  main.py  pyproject.toml  query.py  test.py
src/utils/: DataParser.py  cex.py  dex.py  queries.py
